# AMHandlers

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_playbooks.py
fabric_am/: __init__.py
fabric_am/config/: al2s_handler_config.yml  net_handler_config.yml  oess_handler_config.yml  switch_handler_config.yml  vm_handler_config.yml  vnic_net_handler_config.yml
fabric_am/handlers/: al2s_handler.py  net_handler.py  net_handler_vnic.py  oess_handler.py  switch_handler.py  vm_handler.py  vnic_net_handler.py
fabric_am/playbooks/: README.md  al2s.yml  al2s_oess.yml  fabric  fpga_provisioning.yml  head.yml  head_attach_floating_ip.yml  head_create_vm.yml  head_delete_vm.yml  head_get_worker_node_for_vm.yml  head_port_provisioning.yml  head_switch_provisioning.yml  head_vm_post_boot_config.yml  head_vm_provisioning.yml  head_volume_provisioning.yml  inventory  inventory_template  multi_function_pci_devices.yml  netam_nso_data.yml  nmcli_config_nw_interface.yml  nmcli_config_tagged_nw_interface.yml  nvme_cleanup.yml  rhel_config_nw_interface.yml  rhel_config_tagged_nw_interface.yml  smart_nic_provisioning.yml  ssh_keys_config.yml  storage_config.yml  worker.yml  worker_add_pci_device.yml  worker_instance_operations.yml  worker_libvirt_operations.yml  worker_pci_card_provisioning.yml  worker_pci_provisioning.yml
fabric_am/playbooks/group_vars/: all
fabric_am/test/: test_al2s_handler.py  test_network_handler.py  test_oess_handler.py  test_vm_handler.py
fabric_am/util/: am_constants.py  ansible_helper.py  utils.py
(+64 files in other folders)
