[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric_am_handlers"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Aggregate Manager Handlers"
dynamic = ["version"]

keywords = ["Fabric Control Framework", "Aggregate Manager Handlers"]

requires-python = '>=3.9'
dependencies = [
    "ansible==7.5.0",
    "paramiko",
    "fabric-cf==1.8.0"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/ControlFramework"

[tool.flit.module]
name = "fabric_am"
